<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".CompleteProfileActivity">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/imgBtnBack"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:layout_marginTop="32dp"
        android:src="@drawable/left_arrow_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Complete Profile"
            android:textAlignment="center"
            android:paddingBottom="32dp"
            android:textAppearance="@style/screen_title_text" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imgBtnEditPhoto"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="24dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/edit_profile_icon" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/textInputFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstname"
            android:textColorHint="@color/hint_and_stroke"
            android:paddingBottom="12dp"
            app:boxStrokeColor="@color/orange"
            app:counterMaxLength="30"
            app:endIconMode="clear_text"
            app:endIconTint="@color/grey"
            app:passwordToggleTint="@color/grey"
            app:placeholderText="peter@gmail.com"
            app:placeholderTextColor="@color/hint_and_stroke">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editFirstName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="30"
                android:inputType="textPersonName"
                android:textAppearance="@style/input_field_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/textInputLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname"
            android:textColorHint="@color/hint_and_stroke"
            android:layout_marginBottom="12dp"
            app:boxStrokeColor="@color/orange"
            app:counterMaxLength="30"
            app:endIconMode="clear_text"
            app:endIconTint="@color/grey"
            app:passwordToggleTint="@color/grey"
            app:placeholderText="peter@gmail.com"
            app:placeholderTextColor="@color/hint_and_stroke">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editLastName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="30"
                android:inputType="textPersonName"
                android:textAppearance="@style/input_field_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textAppearance="@style/regular_text"
            android:paddingBottom="4dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textAppearance="@style/regular_text"
            android:paddingBottom="4dp" />

        <androidx.appcompat.widget.AppCompatSpinner
            style="@style/Widget.AppCompat.Spinner"
            android:id="@+id/spinnerGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/input_field_text" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnComplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/complete_btn"
        android:padding="12dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/btn_bg"
        android:layout_alignParentBottom="true"
        android:textAppearance="@style/btn_text" />
</RelativeLayout>